--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "redux-persist": "^6.0.0"
