--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
-    "gh-pages": "^6.3.0",
     "localforage": "^1.10.0",
     "react": "^19.1.1",
     "react-content-loader": "^7.1.1",
